--- a/django_code/shoppinglist/templates/shoppinglist/index.html
+++ b/django_code/shoppinglist/templates/shoppinglist/index.html
@@ -2,8 +2,12 @@
 
 <html lang="en">
 	<head>
+		{% load static %}
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="{% static 'shoppinglist/style.css' %}">
+
 		<title>Lists</title>
 	</head>
 
