--- a/django_code/shoppinglist/templates/shoppinglist/detail.html
+++ b/django_code/shoppinglist/templates/shoppinglist/detail.html
@@ -39,7 +39,7 @@
 
 				<label>item quantity, item name/description: </label>
 				<br />
-				<input type="number" name="quantity" id="quantity" value="1">
+				<input style="width: 3em;" type="number" name="quantity" id="quantity" value="1" min="1" max="999">
 				<label>, </label>
 				<input type="text" name="name" id="name" value="{{ list.id }}">
 				<br /> <br />
