Update button text

--- a/django_code/shoppinglist/templates/shoppinglist/detail.html
+++ b/django_code/shoppinglist/templates/shoppinglist/detail.html
@@ -27,7 +27,7 @@
 				{% endfor %}
 
 				<br />
-				<input type="submit" name="update" value="Finish Shopping">
+				<input type="submit" name="update" value="Save Selected">
 				<input type="submit" name="delete" value="Remove Selected">
 			</fieldset>
 		</form>
