Disable django-pwa for now

--- a/django_code/shoppinglist/templates/shoppinglist/index.html
+++ b/django_code/shoppinglist/templates/shoppinglist/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
+<!-- { % load pwa %} -->
+
 <html lang="en">
-	{% load pwa %}
-	{% progressive_web_app_meta %}
+	<!-- { % progressive_web_app_meta %} -->
 	<head>
 		{% load static %}
 
